<?xml version="1.0" encoding="UTF-8"?>
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.bambuynaranja.libreria</groupId>
  <artifactId>recomienda</artifactId>
  <packaging>war</packaging>
  <version>0.1.0</version>
  <name>GWT Maven Archetype</name>

  <properties>
    <!-- Convenience property to set the GWT version -->
    <gwtVersion>2.8.0-beta1</gwtVersion>

    <!-- GWT needs at least java 1.6 -->
    <maven.compiler.source>1.7</maven.compiler.source>
    <maven.compiler.target>1.7</maven.compiler.target>
	<gwtBoostrapVersion>0.9.1</gwtBoostrapVersion>
	
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.google.gwt</groupId>
        <artifactId>gwt</artifactId>
        <version>${gwtVersion}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-servlet</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-dev</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
	<!-- GWT Bootstrap3 -->
	<dependency>
		<groupId>org.gwtbootstrap3</groupId>
		<artifactId>gwtbootstrap3</artifactId>
		<version>${gwtBoostrapVersion}</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
  		<groupId>org.gwtbootstrap3</groupId>
  		<artifactId>gwtbootstrap3-extras</artifactId>
  		<version>${gwtBoostrapVersion}</version>
  		<scope>provided</scope>
	</dependency>

    <!-- GWT Jackson -->
	<dependency>
		<groupId>com.github.nmorel.gwtjackson</groupId>
		<artifactId>gwt-jackson</artifactId>
		<version>0.10.0</version>
	</dependency>
  </dependencies>

  <build>
    <!-- Output classes directly into the webapp, so that IDEs and "mvn process-classes" update them in DevMode -->
    <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>

    <plugins>

      <!-- GWT Maven Plugin -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>gwt-maven-plugin</artifactId>
        <version>2.8.0-beta1</version>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
              <goal>test</goal>
              <goal>generateAsync</goal>
            </goals>
          </execution>
        </executions>
        <!-- Plugin configuration. There are many available options, see 
          gwt-maven-plugin documentation at codehaus.org -->
        <configuration>
          <runTarget>Recomienda.html</runTarget>
          <modules>
            <module>com.bambuynaranja.libreria.Recomienda</module>
          </modules>
          <extraJvmArgs>${gwt.extraJvmArgs}</extraJvmArgs>
		  <bindAddress>0.0.0.0</bindAddress>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
	<profile>
		<id>dev</id>
			
			<properties>
			
				<!-- con el SDM no tenemos que meter el linker -->
				<csp.linker>
	    				<![CDATA[ ]]>
	    		</csp.linker>
	    		
	    		<!-- le damos mas memoria a GWT -->
	    		<gwt.extraJvmArgs>-Xms512m -Xmx2024m -XX:PermSize=256m -XX:MaxPermSize=800m</gwt.extraJvmArgs>	    		
			</properties>
			<build>
				<plugins>
				<!-- build helper para leer los src de BaremoCore -->
			      <plugin>
			         <groupId>org.codehaus.mojo</groupId>
			         <artifactId>build-helper-maven-plugin</artifactId>
			         <version>1.9.1</version>
			         <executions>
			           <execution>
			             <id>add-source</id>
			             <phase>generate-sources</phase>
			             <goals>
			               <goal>add-source</goal>
			             </goals>
			             <configuration>
			               <sources>
			               </sources>
			             </configuration>
			           </execution>
			           <execution>
			             <id>add-resource</id>
			             <phase>generate-sources</phase>
			             <goals>
			               <goal>add-resource</goal>
			             </goals>
			             <configuration>
			               
			               <resources>
			               </resources>
			             </configuration>
			           </execution>
			         </executions>
			       </plugin>
				
				</plugins>
				
			</build>
			
		</profile>
	</profiles>
</project>
